[package]
authors = ["Ajax Dong <i@aajax.top>", "adamanteye <ada@adamanteye.cc>"]
edition = "2024"
name = "quicap"
version = "0.1.0"

[dependencies]
clap = { features = ["derive"], version = "4" }
quiche = "0.24"
rand = "0.8"
tokio = { features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
], version = "1" }
tokio-tun = "0.14"
tracing = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
